src/test/deca/syntax/invalid/created/parser/random_100_TOKENS.deca.res
random_100_TOKENS.deca:21:7: token recognition error at: '�'
